--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   ],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@langchain/community": "^0.2.0",
     "@langchain/core": "^0.3.0",
