--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/agent/graph.js"
+    "start": "node dist/server.js"
   },
   "keywords": [
     "langchain",
@@ -25,6 +25,7 @@
     "@langchain/langgraph": "0.2.65",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "langserve": "^0.0.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
