--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,35 @@
+# Git files
+.git
+.gitignore
+
+# Node modules
 node_modules
-dist
+
+# Environment variables
+.env*
+!.env.example
+
+# Build artifacts (we need dist *inside* the build stages, but not from the host)
+# dist # Removed this line
+
+# OS generated files
+.DS_Store
+*.pem
+
+# Log files
+*.log
+
+# Debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
+*.sublime-project
