--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@langchain/core": "^0.3.0",
     "@langchain/google-genai": "^0.2.0",
     "@langchain/langgraph": "0.2.65",
+    "@types/express": "^4",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
-    "langserve": "^0.0.2",
+    "express": "^4",
+    "langchain": "^0.3.23",
     "zod": "^3.24.3"
   },
   "devDependencies": {
