Node version updates again

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=20"
+    "node": "20"
   },
   "dependencies": {
     "@langchain/community": "^0.3.41",
